// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxCell component CheckboxCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="table--cell--checkbox"
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field gds-checkbox-container input-checkbox-field gds-typography"
            >
              <label
                class="input-checkbox-field-read-only input-checkbox-field-checked"
                for="checkbox-1"
                tabindex="-1"
              >
                <div
                  aria-checked="true"
                  aria-label="Label 1"
                  class="checkbox-marker"
                  id="checkbox-1"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fas,square-check"
                  />
                </div>
                Label 1
              </label>
              <label
                class="input-checkbox-field-read-only"
                for="checkbox-2"
                tabindex="-1"
              >
                <div
                  aria-checked="false"
                  aria-label="Label 2"
                  class="checkbox-marker"
                  id="checkbox-2"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fas,square"
                  />
                </div>
                Label 2
              </label>
              <label
                class="input-checkbox-field-read-only"
                for="checkbox-3"
                tabindex="-1"
              >
                <div
                  aria-label="Label 3"
                  class="checkbox-marker"
                  id="checkbox-3"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fas,square"
                  />
                </div>
                Label 3
              </label>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CheckboxCell component CheckboxCell renders in edit mode and handles change 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="table--cell--checkbox"
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field gds-checkbox-container input-checkbox-field gds-typography"
            >
              <label
                class="input-checkbox-field-checked"
                data-testid="DATA-TEST-ID-0"
                for="checkbox-8"
                tabindex="0"
              >
                <div
                  aria-checked="true"
                  aria-label="Label 1"
                  class="checkbox-marker"
                  id="checkbox-8"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fas,square-check"
                  />
                </div>
                Label 1
              </label>
              <label
                class=""
                data-testid="DATA-TEST-ID-1"
                for="checkbox-9"
                tabindex="0"
              >
                <div
                  aria-checked="false"
                  aria-label="Label 2"
                  class="checkbox-marker"
                  id="checkbox-9"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fal,square"
                  />
                </div>
                Label 2
              </label>
              <label
                class=""
                data-testid="DATA-TEST-ID-2"
                for="checkbox-10"
                tabindex="0"
              >
                <div
                  aria-label="Label 3"
                  class="checkbox-marker"
                  id="checkbox-10"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fal,square"
                  />
                </div>
                Label 3
              </label>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CheckboxCell component CheckboxCell renders in edit mode via extra 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="table--cell--checkbox"
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field gds-checkbox-container input-checkbox-field gds-typography"
            >
              <label
                class="input-checkbox-field-checked"
                for="checkbox-11"
                tabindex="0"
              >
                <div
                  aria-checked="true"
                  aria-label="Label 1"
                  class="checkbox-marker"
                  id="checkbox-11"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fas,square-check"
                  />
                </div>
                Label 1
              </label>
              <label
                class=""
                for="checkbox-12"
                tabindex="0"
              >
                <div
                  aria-checked="false"
                  aria-label="Label 2"
                  class="checkbox-marker"
                  id="checkbox-12"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fal,square"
                  />
                </div>
                Label 2
              </label>
              <label
                class=""
                for="checkbox-13"
                tabindex="0"
              >
                <div
                  aria-label="Label 3"
                  class="checkbox-marker"
                  id="checkbox-13"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fal,square"
                  />
                </div>
                Label 3
              </label>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CheckboxCell component CheckboxCell renders when hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="table--cell--checkbox"
          style="display: none;"
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field gds-checkbox-container input-checkbox-field gds-typography"
            >
              <label
                class="input-checkbox-field-read-only input-checkbox-field-checked"
                for="checkbox-5"
                tabindex="-1"
              >
                <div
                  aria-checked="true"
                  aria-label="Label 1"
                  class="checkbox-marker"
                  id="checkbox-5"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fas,square-check"
                  />
                </div>
                Label 1
              </label>
              <label
                class="input-checkbox-field-read-only"
                for="checkbox-6"
                tabindex="-1"
              >
                <div
                  aria-checked="false"
                  aria-label="Label 2"
                  class="checkbox-marker"
                  id="checkbox-6"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fas,square"
                  />
                </div>
                Label 2
              </label>
              <label
                class="input-checkbox-field-read-only"
                for="checkbox-7"
                tabindex="-1"
              >
                <div
                  aria-label="Label 3"
                  class="checkbox-marker"
                  id="checkbox-7"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fas,square"
                  />
                </div>
                Label 3
              </label>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CheckboxCell component CheckboxCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="table--cell--checkbox"
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field gds-checkbox-container input-checkbox-field gds-typography"
            >
              <label
                class="input-checkbox-field-read-only input-checkbox-field-checked"
                for="checkbox-4"
                tabindex="-1"
              >
                <div
                  aria-checked="true"
                  aria-label="Label 4"
                  class="checkbox-marker"
                  id="checkbox-4"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fas,square-check"
                  />
                </div>
                Label 4
              </label>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
